--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "advice-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://AnjaliSharma1234.github.io/Personal-Advisor-React-App",
+  "homepage": "http://szendejo.github.io/Personal-Portfolio",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
